Fix contact form by adding a thank you page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -37,7 +37,7 @@
                 <p style="text-align: center; max-width: 600px; margin: 10px auto 40px;">Tell us about your project, and we'll help you find the best solution to compel and engage your target audience. Fill out the form below to get started.</p>
             </div>
 
-            <form class="contact-form" name="contact-form" method="POST" data-netlify="true">
+            <form class="contact-form" name="contact-form" method="POST" data-netlify="true" action="/pages/thank-you.html">
                 <input type="hidden" name="form-name" value="contact-form" />
                 <div class="form-group">
                     <label for="name">Your Name:</label>
@@ -108,3 +108,4 @@
     </div>
 </body>
 </html>
+
