Feat: Add brand story section to About Us page

--- a/pages/about.html
+++ b/pages/about.html
@@ -32,20 +32,35 @@
         </header>
 
         <section class="about-us-section">
-            <h1 class="about-us-header">Our Story & Approach</h1>
-            <p class="about-us-subheader">My web development story began in August 2025 by asking Gemini to build me a simple website. Within a month, I learned about HTML, CSS, JavaScript, JamStack, CMS, LDE, SSG, Functions with API Key security, integrating to a PWA, and much much more. Gemini was the catalyst that enabled me with the tools/knowledge to build super-fast and secure websites, but my business background and sense is what made my web development engaging and unique; I drive business to your site and convert visitors into clients/enthusiasts of your vision.</p>
-
-            <div class="mission-statement">
-                <h2>Our Mission</h2>
-                <p>We work closely with clients to understand their vision and goals. Our unique ability is to translate those goals into compelling and engaging web experiences that resonate with their target audience. We believe in building trust through transparency, communication, and a commitment to quality in every project we undertake.</p>
+            <div class="about-us-content">
+                <div class="about-us-text">
+                    <h1 style="font-size: 36px; color: #2c3e50;">About Site Mills</h1>
+                    <p>Founded by Dan Mills, Site Mills is dedicated to crafting bespoke web solutions that empower businesses and professionals. Based in the vibrant city of Bangkok, we specialize in building fast, secure, and beautiful websites that are tailored to the unique needs of our clients.</p>
+                    
+                    <h2 style="font-size: 28px; color: #2c3e50; margin-top: 30px;">Our Mission</h2>
+                    <p>Our mission is to bridge the gap between your vision and a powerful digital presence. We believe that a website should be more than just an online brochure; it should be a strategic asset that works for you. By leveraging modern technologies and a collaborative process, we build websites that not only look great but also perform exceptionally, providing a seamless experience for your audience.</p>
+                </div>
+                <div class="about-us-image">
+                    <img src="../assets/images/danmillsheadshot.jpg" alt="Dan Mills Headshot">
+                </div>
             </div>
+        </section>
 
-            <div class="team-members">
-                <div class="team-card">
-                    <img src="../assets/images/danmillsheadshot.jpg" alt="Daniel Mills headshot" class="team-image">
-                    <h3>Daniel Mills</h3>
-                    <p>Founder & Lead Developer</p>
-                    <p class="team-bio">Growing up in Hawaii, Dan graduated from the University of Oregon’s Lundquist College of Business to pursue an early career in entrepreneurship, and learning from local businesses in Eugene and Portland. A return to Hawaii, introduced Dan to beekeeping. A new chapter began when Dan and his wife welcomed their son and moved to Thailand. Dan began teaching English and farming. With the advent of AI, Dan decided to take a leap into Web Dev and never looked back. My background and perspective are unique, diverse, and will result in equally powerful websites.</p>
+        <!-- New Brand Story Section -->
+        <section class="brand-story-section">
+            <div class="brand-story-content">
+                <div class="brand-logo-container">
+                    <img src="../assets/images/logowhiteback.png" alt="Site Mills Logo - White Background" class="brand-logo-large">
+                </div>
+                <div class="brand-story-text">
+                    <h2 style="font-size: 28px; color: #2c3e50;">Our Brand, Our Process</h2>
+                    <p>The Site Mills logo is more than just an image—it's a symbol of our entire development philosophy. The windmill represents the process of "milling" or building something valuable from raw materials. Each of the four blades represents a core pillar of modern web development, working in harmony to create a complete and powerful digital experience.</p>
+                    <ul class="brand-pillars">
+                        <li><strong>&lt;/&gt; Markup:</strong> The structural foundation of your site, built with clean and semantic HTML and CSS.</li>
+                        <li><strong>{ } Logic:</strong> The dynamic functionality and interactivity powered by modern JavaScript and serverless functions.</li>
+                        <li><strong><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-database" viewBox="0 0 16 16" style="display:inline-block; vertical-align:middle; margin-right: 5px;"><path d="M4 1.5A2.5 2.5 0 0 1 6.5 4h3A2.5 2.5 0 0 1 12 1.5v1A2.5 2.5 0 0 1 9.5 5h-3A2.5 2.5 0 0 1 4 2.5v-1zM4 6.5A2.5 2.5 0 0 1 6.5 9h3A2.5 2.5 0 0 1 12 6.5v1A2.5 2.5 0 0 1 9.5 10h-3A2.5 2.5 0 0 1 4 7.5v-1zM4 11.5A2.5 2.5 0 0 1 6.5 14h3a2.5 2.5 0 0 1 2.5-2.5v1A2.5 2.5 0 0 1 9.5 15h-3A2.5 2.5 0 0 1 4 12.5v-1z"/></svg> Data:</strong> The secure and efficient management of information, from user data to e-commerce products.</li>
+                        <li><strong><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cloud-arrow-up" viewBox="0 0 16 16" style="display:inline-block; vertical-align:middle; margin-right: 5px;"><path fill-rule="evenodd" d="M7.646 5.146a.5.5 0 0 1 .708 0l2 2a.5.5 0 0 1-.708.708L8.5 6.707V10.5a.5.5 0 0 1-1 0V6.707L6.354 7.854a.5.5 0 1 1-.708-.708l2-2z"/><path d="M4.406 3.342A5.53 5.53 0 0 1 8 2c2.69 0 4.923 2 5.166 4.579C14.758 6.804 16 8.137 16 9.773 16 11.569 14.502 13 12.687 13H3.728C1.67 13 0 11.328 0 9.286c0-1.867 1.272-3.467 3.006-3.951a5.53 5.53 0 0 1 1.4-2zM8 3a4.53 4.53 0 0 0-3.934 2.14A3.5 3.5 0 0 0 1.25 9.286 2.5 2.5 0 0 0 3.728 12h8.96C13.98 12 15 10.988 15 9.773c0-1.036-1.02-1.822-2.32-1.822-.224 0-.442.025-.658.075a4.5 4.5 0 0 0-4.028-4.47z"/></svg> Deployment:</strong> The final, seamless delivery of your website to a global audience.</li>
+                    </ul>
                 </div>
             </div>
         </section>
