About Logo Description Update

--- a/pages/about.html
+++ b/pages/about.html
@@ -56,10 +56,10 @@
                     <h2 style="font-size: 28px; color: #2c3e50;">Our Brand, Our Process</h2>
                     <p>The Site Mills logo is more than just an image—it's a symbol of our entire development philosophy. The windmill represents the process of "milling" or building something valuable from raw materials. Each of the four blades represents a core pillar of modern web development, working in harmony to create a complete and powerful digital experience.</p>
                     <ul class="brand-pillars">
-                        <li><strong>&lt;/&gt; Markup:</strong> The structural foundation of your site, built with clean and semantic HTML and CSS.</li>
-                        <li><strong>{ } Logic:</strong> The dynamic functionality and interactivity powered by modern JavaScript and serverless functions.</li>
-                        <li><strong><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-database" viewBox="0 0 16 16" style="display:inline-block; vertical-align:middle; margin-right: 5px;"><path d="M4 1.5A2.5 2.5 0 0 1 6.5 4h3A2.5 2.5 0 0 1 12 1.5v1A2.5 2.5 0 0 1 9.5 5h-3A2.5 2.5 0 0 1 4 2.5v-1zM4 6.5A2.5 2.5 0 0 1 6.5 9h3A2.5 2.5 0 0 1 12 6.5v1A2.5 2.5 0 0 1 9.5 10h-3A2.5 2.5 0 0 1 4 7.5v-1zM4 11.5A2.5 2.5 0 0 1 6.5 14h3a2.5 2.5 0 0 1 2.5-2.5v1A2.5 2.5 0 0 1 9.5 15h-3A2.5 2.5 0 0 1 4 12.5v-1z"/></svg> Data:</strong> The secure and efficient management of information, from user data to e-commerce products.</li>
-                        <li><strong><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cloud-arrow-up" viewBox="0 0 16 16" style="display:inline-block; vertical-align:middle; margin-right: 5px;"><path fill-rule="evenodd" d="M7.646 5.146a.5.5 0 0 1 .708 0l2 2a.5.5 0 0 1-.708.708L8.5 6.707V10.5a.5.5 0 0 1-1 0V6.707L6.354 7.854a.5.5 0 1 1-.708-.708l2-2z"/><path d="M4.406 3.342A5.53 5.53 0 0 1 8 2c2.69 0 4.923 2 5.166 4.579C14.758 6.804 16 8.137 16 9.773 16 11.569 14.502 13 12.687 13H3.728C1.67 13 0 11.328 0 9.286c0-1.867 1.272-3.467 3.006-3.951a5.53 5.53 0 0 1 1.4-2zM8 3a4.53 4.53 0 0 0-3.934 2.14A3.5 3.5 0 0 0 1.25 9.286 2.5 2.5 0 0 0 3.728 12h8.96C13.98 12 15 10.988 15 9.773c0-1.036-1.02-1.822-2.32-1.822-.224 0-.442.025-.658.075a4.5 4.5 0 0 0-4.028-4.47z"/></svg> Deployment:</strong> The final, seamless delivery of your website to a global audience.</li>
+                        <li><strong>Top Blade ( &lt;/&gt; ):</strong> Represents code and development, signifying HTML and the core programming that forms the backbone of every website.</li>
+                        <li><strong>Right Blade (Pixelated Grid):</strong> Evokes digital information and data. This symbolizes the processing of digital elements and content, much like a mill grinds raw material.</li>
+                        <li><strong>Bottom Blade ( { } ):</strong> Represents JSON (JavaScript Object Notation), a lightweight format essential for modern APIs and data handling. It signifies our use of modern web technologies.</li>
+                        <li><strong>Left Blade (Stacked Cylinders):</strong> This symbol represents a database and data storage, signifying the robust back-end infrastructure required for dynamic and data-driven websites.</li>
                     </ul>
                 </div>
             </div>
@@ -83,3 +83,4 @@
     </div>
 </body>
 </html>
+
