Location to Ban Pong and style format for portfolio panels

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -37,7 +37,7 @@
                 <p style="text-align: center; max-width: 600px; margin: 10px auto 40px;">Tell us about your project, and we'll help you find the best solution to compel and engage your target audience. Fill out the form below to get started.</p>
             </div>
 
-            <form class="contact-form" name="contact-form" method="POST" data-netlify="true" action="/pages/thank-you.html">
+            <form class="contact-form" name="contact-form" method="POST" action="/pages/thank-you.html" data-netlify="true">
                 <input type="hidden" name="form-name" value="contact-form" />
                 <div class="form-group">
                     <label for="name">Your Name:</label>
@@ -96,7 +96,7 @@
                     <h3>Contact Us</h3>
                     <p>Email: dgkmills@gmail.com</p>
                     <p>Phone: 086 333 1493</p>
-                    <p>Location: Bangkok, Thailand</p>
+                    <p>Location: Ban Pong, Thailand</p>
                 </div>
                 <div class="social-links">
                     <h3>Follow Us</h3>
