--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -41,7 +41,7 @@
                     <img src="../assets/images/drkhathumb.png" alt="Dr. Ketwalee's Professional Website" class="panel-image">
                     <div class="panel-content">
                         <div class="panel-details">
-                            <h3>Dr. Ketwalee Kositkanawuth’s Professional Website</h3>
+                            <h3>Asst. Prof. Dr. Ketwalee Kositkanawuth</h3>
                             <p>KMUTT Assistant Professor’s Professional Site</p>
                         </div>
                         <div class="panel-sidebar">
@@ -53,34 +53,34 @@
                     </div>
                 </a>
                 
-                <!-- Project 2: Aree’s Fun Page -->
+                <!-- Project 2: Aree Website -->
                 <a href="https://dgkmills.github.io/Aree/" target="_blank" class="portfolio-panel">
-                    <img src="../assets/images/areethumb.png" alt="Aree's Fun Page" class="panel-image">
+                    <img src="../assets/images/areethumb.png" alt="Aree's Website" class="panel-image">
                     <div class="panel-content">
                         <div class="panel-details">
-                            <h3>Aree’s Fun Page</h3>
-                            <p>Student’s personal site to teach and empower student with English and web development skills.</p>
+                            <h3>Aree Website</h3>
+                            <p>A personal site to empower a student with English and web development skills.</p>
                         </div>
                         <div class="panel-sidebar">
                             <h4>Project Details</h4>
                             <p><strong>Goal:</strong> Grow student’s interest in web development.</p>
                             <p><strong>Style:</strong> Chosen and adjusted by student</p>
-                            <p><strong>Functions:</strong> No Functions yet.</p>
+                            <p><strong>Functions:</strong> None currently</p>
                         </div>
                     </div>
                 </a>
                 
-                <!-- Project 3: Teacher Dan -->
+                <!-- Project 3: Teacher Dan Scheduler -->
                 <a href="https://dgkmills-schedule-tracker.web.app/#" target="_blank" class="portfolio-panel">
-                    <img src="../assets/images/tdanthumb.png" alt="Teacher Dan's Website" class="panel-image">
+                    <img src="../assets/images/tdanthumb.png" alt="Teacher Dan's Scheduler Website" class="panel-image">
                     <div class="panel-content">
                         <div class="panel-details">
-                            <h3>Teacher Dan</h3>
-                            <p>Professional site for Teacher Dan (me) to promote and market teaching services.</p>
+                            <h3>Teacher Dan Scheduler</h3>
+                            <p>A professional tool to promote and market teaching services and manage scheduling.</p>
                         </div>
                         <div class="panel-sidebar">
                             <h4>Project Details</h4>
-                            <p><strong>Goal:</strong> Notify public of availability, market teaching services, and drive interested clients to schedule an appointment.</p>
+                            <p><strong>Goal:</strong> Notify public of availability, market services, and drive clients to schedule appointments.</p>
                             <p><strong>Style:</strong> Clean and professional</p>
                             <p><strong>Functions:</strong> Scheduler and class package tracker.</p>
                         </div>
@@ -96,7 +96,7 @@
                     <h3>Contact Us</h3>
                     <p>Email: dgkmills@gmail.com</p>
                     <p>Phone: 086 333 1493</p>
-                    <p>Location: Bangkok, Thailand</p>
+                    <p>Location: Ban Pong, Thailand</p>
                 </div>
                 <div class="social-links">
                     <h3>Follow Us</h3>
@@ -108,3 +108,4 @@
     </div>
 </body>
 </html>
+
