--- a/pages/about.html
+++ b/pages/about.html
@@ -32,34 +32,33 @@
         </header>
 
         <section class="about-us-section">
-            <div class="about-us-content">
+             <div class="about-us-content">
                 <div class="about-us-text">
-                    <h1 style="font-size: 36px; color: #2c3e50;">About Site Mills</h1>
-                    <p>Founded by Dan Mills, Site Mills is dedicated to crafting bespoke web solutions that empower businesses and professionals. Based in the vibrant city of Bangkok, we specialize in building fast, secure, and beautiful websites that are tailored to the unique needs of our clients.</p>
+                    <h1 class="about-us-header">About Site Mills</h1>
+                    <p>Founded by Dan Mills, Site Mills is dedicated to crafting custom web solutions that empower businesses and professionals. Based in Ban Pong, we specialize in building fast, secure, and beautiful websites that are tailored to the unique needs of our clients.</p>
                     
-                    <h2 style="font-size: 28px; color: #2c3e50; margin-top: 30px;">Our Mission</h2>
-                    <p>Our mission is to bridge the gap between your vision and a powerful digital presence. We believe that a website should be more than just an online brochure; it should be a strategic asset that works for you. By leveraging modern technologies and a collaborative process, we build websites that not only look great but also perform exceptionally, providing a seamless experience for your audience.</p>
+                    <h2>Our Mission</h2>
+                    <p>We work closely with clients to understand their vision and goals. Our unique ability is to translate those goals into compelling and engaging web experiences that resonate with their target audience. We believe in building trust through transparency, communication, and a commitment to quality in every project we undertake.</p>
                 </div>
                 <div class="about-us-image">
-                    <img src="../assets/images/danmillsheadshot.jpg" alt="Dan Mills Headshot">
+                    <img src="../assets/images/danmillsheadshot.jpg" alt="A headshot of Daniel Mills, founder of Site Mills.">
                 </div>
             </div>
         </section>
 
-        <!-- New Brand Story Section -->
         <section class="brand-story-section">
             <div class="brand-story-content">
                 <div class="brand-logo-container">
-                    <img src="../assets/images/logowhiteback.png" alt="Site Mills Logo - White Background" class="brand-logo-large">
+                    <img src="../assets/images/logowhiteback.png" alt="Site Mills Logo" class="brand-logo-large">
                 </div>
                 <div class="brand-story-text">
-                    <h2 style="font-size: 28px; color: #2c3e50;">Our Brand, Our Process</h2>
+                    <h2>Our Brand, Our Process</h2>
                     <p>The Site Mills logo is more than just an image—it's a symbol of our entire development philosophy. The windmill represents the process of "milling" or building something valuable from raw materials. Each of the four blades represents a core pillar of modern web development, working in harmony to create a complete and powerful digital experience.</p>
                     <ul class="brand-pillars">
-                        <li><strong>Top Blade ( &lt;/&gt; ):</strong> Represents code and development, signifying HTML and the core programming that forms the backbone of every website.</li>
-                        <li><strong>Right Blade (Pixelated Grid):</strong> Evokes digital information and data. This symbolizes the processing of digital elements and content, much like a mill grinds raw material.</li>
-                        <li><strong>Bottom Blade ( { } ):</strong> Represents JSON (JavaScript Object Notation), a lightweight format essential for modern APIs and data handling. It signifies our use of modern web technologies.</li>
-                        <li><strong>Left Blade (Stacked Cylinders):</strong> This symbol represents a database and data storage, signifying the robust back-end infrastructure required for dynamic and data-driven websites.</li>
+                        <li><strong>&lt;/&gt; Markup:</strong> This commonly represents code or development, often signifying HTML or general programming, which is core to web development.</li>
+                        <li><strong>{ } Logic:</strong> This represents JSON (JavaScript Object Notation), a lightweight data-interchange format often used in web development for APIs and data structures. It signifies modern web technologies and how data is handled.</li>
+                        <li><strong>Data:</strong> This symbol typically represents a database or data storage. In web development, websites often interact with databases to store and retrieve information, so it signifies the back-end infrastructure.</li>
+                        <li><strong>Deployment:</strong> This symbol is meant to evoke digital information, data, or the internet itself. It can also hint at the "grinding" or processing of digital elements, much like a mill.</li>
                     </ul>
                 </div>
             </div>
@@ -71,7 +70,7 @@
                     <h3>Contact Us</h3>
                     <p>Email: dgkmills@gmail.com</p>
                     <p>Phone: 086 333 1493</p>
-                    <p>Location: Bangkok, Thailand</p>
+                    <p>Location: Ban Pong, Thailand</p>
                 </div>
                 <div class="social-links">
                     <h3>Follow Us</h3>
