feat: Add links to homepage project slideshow

--- a/index.html
+++ b/index.html
@@ -42,18 +42,26 @@
 
         <h2 class="slideshow-header">Featured Projects</h2>
         <div class="slideshow-container">
-            <!-- === CORRECTED SLIDE LABELS === -->
+            <!-- Slide 1: Teacher Dan -->
             <div class="mySlides fade">
-                <img class="slide-image" src="assets/images/tdanthumb.png" alt="Teacher Dan's Scheduler website preview">
-                <div class="slide-caption">Teacher Dan's Scheduler</div>
+                <a href="https://dgkmills-schedule-tracker.web.app/#" target="_blank" class="slide-link">
+                    <img class="slide-image" src="assets/images/tdanthumb.png" alt="Teacher Dan's Scheduler website preview">
+                    <div class="slide-caption">Teacher Dan's Scheduler</div>
+                </a>
             </div>
+            <!-- Slide 2: Dr. Ketwalee -->
             <div class="mySlides fade">
-                <img class="slide-image" src="assets/images/drkhathumb.png" alt="Dr. Kha's academic portfolio website preview">
-                <div class="slide-caption">Asst. Prof. Dr. Ketwalee Kositkanawuth</div>
+                <a href="https://rococo-unicorn-1db944.netlify.app/" target="_blank" class="slide-link">
+                    <img class="slide-image" src="assets/images/drkhathumb.png" alt="Dr. Kha's academic portfolio website preview">
+                    <div class="slide-caption">Asst. Prof. Dr. Ketwalee Kositkanawuth</div>
+                </a>
             </div>
+            <!-- Slide 3: Aree -->
             <div class="mySlides fade">
-                <img class="slide-image" src="assets/images/areethumb.png" alt="Aree's website preview">
-                <div class="slide-caption">Aree's Website</div>
+                <a href="https://dgkmills.github.io/Aree/" target="_blank" class="slide-link">
+                    <img class="slide-image" src="assets/images/areethumb.png" alt="Aree's website preview">
+                    <div class="slide-caption">Aree's Website</div>
+                </a>
             </div>
         </div>
         <div class="dot-container">
@@ -144,3 +152,4 @@
     </script>
 </body>
 </html>
+
