new url and email domains

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -37,7 +37,7 @@
             
             <div class="portfolio-panels-container">
                 <!-- Project 1: Dr. Ketwalee Kositkanawuth’s Professional Website -->
-                <a href="https://rococo-unicorn-1db944.netlify.app/" target="_blank" class="portfolio-panel">
+                <a href="https://drkha.site-mills.com" target="_blank" class="portfolio-panel">
                     <img src="../assets/images/drkhathumb.png" alt="Dr. Ketwalee's Professional Website" class="panel-image">
                     <div class="panel-content">
                         <div class="panel-details">
@@ -71,7 +71,7 @@
                 </a>
                 
                 <!-- === CORRECTED PROJECT LABEL === -->
-                <a href="https://dgkmills-schedule-tracker.web.app/#" target="_blank" class="portfolio-panel">
+                <a href="https://schedule.dgkmills.com" target="_blank" class="portfolio-panel">
                     <img src="../assets/images/tdanthumb.png" alt="Teacher Dan's Scheduler Website" class="panel-image">
                     <div class="panel-content">
                         <div class="panel-details">
@@ -94,7 +94,7 @@
             <div class="footer-content">
                 <div class="contact-info">
                     <h3>Contact Us</h3>
-                    <p>Email: dgkmills@gmail.com</p>
+                    <p>Email: dan@site-mills.com</p>
                     <p>Phone: 086 333 1493</p>
                     <p>Location: Ban Pong, Thailand</p>
                 </div>
