--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
         <div class="slideshow-container">
             <!-- Slide 1: Teacher Dan -->
             <div class="mySlides fade">
-                <a href="https://dgkmills-schedule-tracker.web.app/#" target="_blank" class="slide-link">
+                <a href="https://schedule.dgkmills.com" target="_blank" class="slide-link">
                     <img class="slide-image" src="assets/images/tdanthumb.png" alt="Teacher Dan's Scheduler website preview">
                     <div class="slide-caption">Teacher Dan's Scheduler</div>
                 </a>
             </div>
             <!-- Slide 2: Dr. Ketwalee -->
             <div class="mySlides fade">
-                <a href="https://rococo-unicorn-1db944.netlify.app/" target="_blank" class="slide-link">
+                <a href="https://drkha.site-mills.com" target="_blank" class="slide-link">
                     <img class="slide-image" src="assets/images/drkhathumb.png" alt="Dr. Kha's academic portfolio website preview">
                     <div class="slide-caption">Asst. Prof. Dr. Ketwalee Kositkanawuth</div>
                 </a>
@@ -98,7 +98,7 @@
             <div class="footer-content">
                 <div class="contact-info">
                     <h3>Contact Us</h3>
-                    <p>Email: dgkmills@gmail.com</p>
+                    <p>Email: dan@site-mills.com</p>
                     <p>Phone: 086 333 1493</p>
                     <p>Location: Ban Pong, Thailand</p>
                 </div>
@@ -152,4 +152,3 @@
     </script>
 </body>
 </html>
-
