--- a/pages/contact.html
+++ b/pages/contact.html
@@ -94,7 +94,7 @@
             <div class="footer-content">
                 <div class="contact-info">
                     <h3>Contact Us</h3>
-                    <p>Email: dgkmills@gmail.com</p>
+                    <p>Email: dan@site-mills.com</p>
                     <p>Phone: 086 333 1493</p>
                     <p>Location: Ban Pong, Thailand</p>
                 </div>
@@ -108,4 +108,3 @@
     </div>
 </body>
 </html>
-
