--- a/pages/thank-you.html
+++ b/pages/thank-you.html
@@ -36,7 +36,7 @@
             <div class="footer-content">
                 <div class="contact-info">
                     <h3>Contact Us</h3>
-                    <p>Email: dgkmills@gmail.com</p>
+                    <p>Email: dan@site-mills.com</p>
                     <p>Phone: 086 333 1493</p>
                     <p>Location: Bangkok, Thailand</p>
                 </div>
@@ -50,4 +50,3 @@
     </div>
 </body>
 </html>
-
