Blog Portfolio remove idea gen function

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -48,7 +48,7 @@
                             <h4>Project Details</h4>
                             <p><strong>Goal:</strong> Facilitate professional networking and convert interested students into graduate research students.</p>
                             <p><strong>Style:</strong> Professional</p>
-                            <p><strong>Functions:</strong> Research Project Idea Generator</p>
+                            <p><strong>Functions:</strong> Streamlined publications section, professional contact form.</p>
                         </div>
                     </div>
                 </a>
