portfolio add dialogue and mattsworld

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -53,7 +53,7 @@
                     </div>
                 </a>
                 
-                <!-- === CORRECTED PROJECT LABEL === -->
+                <!-- Project 2: Aree's Website -->
                 <a href="https://dgkmills.github.io/Aree/" target="_blank" class="portfolio-panel">
                     <img src="../assets/images/areethumb.png" alt="Aree's Website" class="panel-image">
                     <div class="panel-content">
@@ -70,7 +70,7 @@
                     </div>
                 </a>
                 
-                <!-- === CORRECTED PROJECT LABEL === -->
+                <!-- Project 3: Teacher Dan's Scheduler -->
                 <a href="https://schedule.dgkmills.com" target="_blank" class="portfolio-panel">
                     <img src="../assets/images/tdanthumb.png" alt="Teacher Dan's Scheduler Website" class="panel-image">
                     <div class="panel-content">
@@ -83,6 +83,40 @@
                             <p><strong>Goal:</strong> Notify public of availability, market services, and drive clients to schedule appointments.</p>
                             <p><strong>Style:</strong> Clean and professional</p>
                             <p><strong>Functions:</strong> Scheduler and class package tracker.</p>
+                        </div>
+                    </div>
+                </a>
+
+                <!-- NEW Project 4: Dialogue Generation Tool -->
+                <a href="https://dialogue.site-mills.com/" target="_blank" class="portfolio-panel">
+                    <img src="../assets/images/dialogue-thumb.png" alt="Dialogue Generation & Scripting Tool" class="panel-image">
+                    <div class="panel-content">
+                        <div class="panel-details">
+                            <h3>Dialogue Generation & Scripting Tool</h3>
+                            <p>An AI-powered tool to create multi-speaker audio from custom scripts.</p>
+                        </div>
+                        <div class="panel-sidebar">
+                            <h4>Project Details</h4>
+                            <p><strong>Goal:</strong> Provide a tool for generating and scripting two-person dialogues for text-to-speech conversion.</p>
+                            <p><strong>Style:</strong> Functional & Clean</p>
+                            <p><strong>Functions:</strong> AI script generation, multi-speaker TTS audio creation, session management.</p>
+                        </div>
+                    </div>
+                </a>
+
+                <!-- NEW Project 5: Matt's World -->
+                <a href="http://mattsworld.dgkmills.com/" target="_blank" class="portfolio-panel">
+                    <img src="../assets/images/mattsworld-thumb.png" alt="Matt's World Website" class="panel-image">
+                    <div class="panel-content">
+                        <div class="panel-details">
+                            <h3>Matt's World</h3>
+                            <p>A personal website project for a young web developer.</p>
+                        </div>
+                        <div class="panel-sidebar">
+                            <h4>Project Details</h4>
+                            <p><strong>Goal:</strong> To create a fun, personal space on the web and practice development skills.</p>
+                            <p><strong>Style:</strong> Creative & Personal</p>
+                            <p><strong>Functions:</strong> A personal blog and project showcase.</p>
                         </div>
                     </div>
                 </a>
@@ -120,3 +154,4 @@
     </script>
 </body>
 </html>
+
