homepage prev add dialg and matt

--- a/index.html
+++ b/index.html
@@ -63,11 +63,27 @@
                     <div class="slide-caption">Aree's Website</div>
                 </a>
             </div>
+            <!-- Slide 4: Dialogue Tool -->
+            <div class="mySlides fade">
+                <a href="https://dialogue.site-mills.com/" target="_blank" class="slide-link">
+                    <img class="slide-image" src="assets/images/dialogue-thumb.png" alt="Dialogue Generation & Scripting Tool website preview">
+                    <div class="slide-caption">Dialogue Generation Tool</div>
+                </a>
+            </div>
+            <!-- Slide 5: Matt's World -->
+            <div class="mySlides fade">
+                <a href="http://mattsworld.dgkmills.com/" target="_blank" class="slide-link">
+                    <img class="slide-image" src="assets/images/mattsworld-thumb.png" alt="Matt's World website preview">
+                    <div class="slide-caption">Matt's World</div>
+                </a>
+            </div>
         </div>
         <div class="dot-container">
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
+            <span class="dot" onclick="currentSlide(5)"></span>
         </div>
 
         <section class="services-section">
