URL fixes and redirects to address 404

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     
+    <!-- SEO Fix: Canonical Link -->
+    <link rel="canonical" href="https://site-mills.com/" />
+
     <!-- Favicon and PWA Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
@@ -20,13 +23,13 @@
     <div class="main-container">
         <header class="header">
             <nav class="navigation">
-                <a href="index.html" class="logo"><img src="assets/images/logo.png" alt="Site Mills Logo"></a>
+                <a href="/index.html" class="logo"><img src="assets/images/logo.png" alt="Site Mills Logo"></a>
                 <div class="nav-links">
-                    <a href="index.html" class="nav-item">Home</a>
-                    <a href="pages/about.html" class="nav-item">About Us</a>
-                    <a href="pages/portfolio.html" class="nav-item">Portfolio</a>
-                    <a href="blog/blog.html" class="nav-item">Blog</a>
-                    <a href="pages/contact.html" class="btn contact-btn">Contact Us</a>
+                    <a href="/index.html" class="nav-item">Home</a>
+                    <a href="/pages/about.html" class="nav-item">About Us</a>
+                    <a href="/pages/portfolio.html" class="nav-item">Portfolio</a>
+                    <a href="/blog/blog.html" class="nav-item">Blog</a>
+                    <a href="/pages/contact.html" class="btn contact-btn">Contact Us</a>
                 </div>
             </nav>
         </header>
@@ -36,7 +39,7 @@
             <div class="hero-text">
                 <h1>Your Vision, Realized on the Web</h1>
                 <p>From stunning portfolios to powerful business tools, we craft fast, secure, and beautiful websites tailored to your unique goals. Let's build something that gets results.</p>
-                <a href="pages/contact.html" class="btn hero-btn">Get a Free Consultation</a>
+                <a href="/pages/contact.html" class="btn hero-btn">Get a Free Consultation</a>
             </div>
         </section>
 
@@ -107,7 +110,7 @@
         <section class="cta-section">
             <h2>Ready to Transform Your Online Presence?</h2>
             <p>Let's turn your ideas into a powerful digital reality. We're ready to build a custom website that engages and converts.</p>
-            <a href="pages/contact.html" class="btn cta-btn">Start Your Project Today</a>
+            <a href="/pages/contact.html" class="btn cta-btn">Start Your Project Today</a>
         </section>
 
         <footer class="footer">
@@ -168,3 +171,4 @@
     </script>
 </body>
 </html>
+
