--- a/pages/about.html
+++ b/pages/about.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     
+    <!-- SEO Fix: Canonical Link -->
+    <link rel="canonical" href="https://site-mills.com/pages/about/" />
+
     <!-- Favicon and PWA Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
@@ -20,13 +23,13 @@
     <div class="main-container">
         <header class="header">
             <nav class="navigation">
-                <a href="../index.html" class="logo"><img src="../assets/images/logo.png" alt="Site Mills Logo"></a>
+                <a href="/index.html" class="logo"><img src="../assets/images/logo.png" alt="Site Mills Logo"></a>
                 <div class="nav-links">
-                    <a href="../index.html" class="nav-item">Home</a>
-                    <a href="about.html" class="nav-item">About Us</a>
-                    <a href="portfolio.html" class="nav-item">Portfolio</a>
-                    <a href="../blog/blog.html" class="nav-item">Blog</a>
-                    <a href="contact.html" class="btn contact-btn">Contact Us</a>
+                    <a href="/index.html" class="nav-item">Home</a>
+                    <a href="/pages/about.html" class="nav-item">About Us</a>
+                    <a href="/pages/portfolio.html" class="nav-item">Portfolio</a>
+                    <a href="/blog/blog.html" class="nav-item">Blog</a>
+                    <a href="/pages/contact.html" class="btn contact-btn">Contact Us</a>
                 </div>
             </nav>
         </header>
@@ -82,3 +85,4 @@
     </div>
 </body>
 </html>
+
