add pronunciation to portfolio/slideshow and categorize portfolio

--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
                     <div class="slide-caption">Dialogue Generation Tool</div>
                 </a>
             </div>
+             <div class="mySlides fade">
+                <a href="https://pronunciation.site-mills.com" target="_blank" class="slide-link">
+                    <img class="slide-image" src="assets/images/pronunciation-thumb.png" alt="Pronunciation Practice Tool website preview">
+                    <div class="slide-caption">Pronunciation Practice Tool</div>
+                </a>
+            </div>
             <div class="mySlides fade">
                 <a href="http://mattsworld.dgkmills.com/" target="_blank" class="slide-link">
                     <img class="slide-image" src="assets/images/mattsworld-thumb.png" alt="Matt's World website preview">
@@ -79,6 +85,7 @@
             <span class="dot" onclick="currentSlide(3)"></span>
             <span class="dot" onclick="currentSlide(4)"></span>
             <span class="dot" onclick="currentSlide(5)"></span>
+            <span class="dot" onclick="currentSlide(6)"></span>
         </div>
 
         <section class="services-section">
