--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -38,6 +38,7 @@
             <h1 class="portfolio-header">Our Work Speaks for Itself</h1>
             <p class="portfolio-subheader">A showcase of projects where we turned creative ideas into compelling digital experiences.</p>
             
+            <h2 class="portfolio-header" style="font-size: 28px; margin-top: 40px;">Professional Sites</h2>
             <div class="portfolio-panels-container">
                 <!-- Project 1: Dr. Ketwalee Kositkanawuth’s Professional Website -->
                 <a href="https://drkha.site-mills.com" target="_blank" class="portfolio-panel">
@@ -52,23 +53,6 @@
                             <p><strong>Goal:</strong> Facilitate professional networking and convert interested students into graduate research students.</p>
                             <p><strong>Style:</strong> Professional</p>
                             <p><strong>Functions:</strong> Streamlined publications section, professional contact form.</p>
-                        </div>
-                    </div>
-                </a>
-                
-                <!-- Project 2: Aree's Website -->
-                <a href="https://dgkmills.github.io/Aree/" target="_blank" class="portfolio-panel">
-                    <img src="../assets/images/areethumb.png" alt="Aree's Website" class="panel-image">
-                    <div class="panel-content">
-                        <div class="panel-details">
-                            <h3>Aree's Website</h3>
-                            <p>A personal site to empower a student with English and web development skills.</p>
-                        </div>
-                        <div class="panel-sidebar">
-                            <h4>Project Details</h4>
-                            <p><strong>Goal:</strong> Grow student’s interest in web development.</p>
-                            <p><strong>Style:</strong> Chosen and adjusted by student</p>
-                            <p><strong>Functions:</strong> None currently</p>
                         </div>
                     </div>
                 </a>
@@ -89,20 +73,23 @@
                         </div>
                     </div>
                 </a>
+            </div>
 
-                <!-- NEW Project 4: Dialogue Generation Tool -->
-                <a href="https://dialogue.site-mills.com/" target="_blank" class="portfolio-panel">
-                    <img src="../assets/images/dialogue-thumb.png" alt="Dialogue Generation & Scripting Tool" class="panel-image">
+            <h2 class="portfolio-header" style="font-size: 28px; margin-top: 40px;">Student Sites</h2>
+            <div class="portfolio-panels-container">
+                <!-- Project 2: Aree's Website -->
+                <a href="https://dgkmills.github.io/Aree/" target="_blank" class="portfolio-panel">
+                    <img src="../assets/images/areethumb.png" alt="Aree's Website" class="panel-image">
                     <div class="panel-content">
                         <div class="panel-details">
-                            <h3>Dialogue Generation & Scripting Tool</h3>
-                            <p>An AI-powered tool to create multi-speaker audio from custom scripts.</p>
+                            <h3>Aree's Website</h3>
+                            <p>A personal site to empower a student with English and web development skills.</p>
                         </div>
                         <div class="panel-sidebar">
                             <h4>Project Details</h4>
-                            <p><strong>Goal:</strong> Provide a tool for generating and scripting two-person dialogues for text-to-speech conversion.</p>
-                            <p><strong>Style:</strong> Functional & Clean</p>
-                            <p><strong>Functions:</strong> AI script generation, multi-speaker TTS audio creation, session management.</p>
+                            <p><strong>Goal:</strong> Grow student’s interest in web development.</p>
+                            <p><strong>Style:</strong> Chosen and adjusted by student</p>
+                            <p><strong>Functions:</strong> None currently</p>
                         </div>
                     </div>
                 </a>
@@ -120,6 +107,43 @@
                             <p><strong>Goal:</strong> To create a fun, personal space on the web and practice development skills.</p>
                             <p><strong>Style:</strong> Creative & Personal</p>
                             <p><strong>Functions:</strong> A personal blog and project showcase.</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <h2 class="portfolio-header" style="font-size: 28px; margin-top: 40px;">Web Tools</h2>
+            <div class="portfolio-panels-container">
+                <!-- NEW Project 4: Dialogue Generation Tool -->
+                <a href="https://dialogue.site-mills.com/" target="_blank" class="portfolio-panel">
+                    <img src="../assets/images/dialogue-thumb.png" alt="Dialogue Generation & Scripting Tool" class="panel-image">
+                    <div class="panel-content">
+                        <div class="panel-details">
+                            <h3>Dialogue Generation & Scripting Tool</h3>
+                            <p>An AI-powered tool to create multi-speaker audio from custom scripts.</p>
+                        </div>
+                        <div class="panel-sidebar">
+                            <h4>Project Details</h4>
+                            <p><strong>Goal:</strong> Provide a tool for generating and scripting two-person dialogues for text-to-speech conversion.</p>
+                            <p><strong>Style:</strong> Functional & Clean</p>
+                            <p><strong>Functions:</strong> AI script generation, multi-speaker TTS audio creation, session management.</p>
+                        </div>
+                    </div>
+                </a>
+
+                <!-- NEW Project: Pronunciation Tool -->
+                <a href="https://pronunciation.site-mills.com" target="_blank" class="portfolio-panel">
+                    <img src="../assets/images/pronunciation-thumb.png" alt="Pronunciation Practice Tool" class="panel-image">
+                    <div class="panel-content">
+                        <div class="panel-details">
+                            <h3>Pronunciation Practice Tool</h3>
+                            <p>An interactive tool for improving English pronunciation with real-time feedback.</p>
+                        </div>
+                        <div class="panel-sidebar">
+                            <h4>Project Details</h4>
+                            <p><strong>Goal:</strong> Provide a simple, effective way for language learners to practice and check their pronunciation of English words.</p>
+                            <p><strong>Style:</strong> Minimalist & Functional</p>
+                            <p><strong>Functions:</strong> Speech recognition, text-to-speech, and visual feedback.</p>
                         </div>
                     </div>
                 </a>
@@ -157,4 +181,3 @@
     </script>
 </body>
 </html>
-
